--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -1775,29 +1775,11 @@
                                                  materialDesign:HintAssist.Hint="Meeting owner login (AM/OM)"
                                                  materialDesign:HintAssist.IsFloating="True"/>
 
-
-                                        <Grid Grid.Row="3"
-                                              Margin="5 5 15 5">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                            </Grid.ColumnDefinitions>
-
-                                            <TextBox Grid.Column="0"
-                                            Text="{Binding FirstMeetingHRSupport, Mode=TwoWay}"
-                                                 materialDesign:HintAssist.Hint="HR support login"
-                                                 materialDesign:HintAssist.IsFloating="True"/>
-
-                                            <Button Grid.Column="1" VerticalAlignment="Top"
-                                                Margin="0 5"
-                                                ToolTip="Assign yourself as owner"
-                                                Style="{StaticResource MaterialDesignFlatButton}"
-                                                Command="{Binding ElementName=customMeetingsListView, Path=DataContext.OnMeetinngHRSupportAssignementCommand}"
-                                                CommandParameter="1">
-                                                <materialDesign:PackIcon Kind="PersonOutline" Foreground="DarkSlateGray"/>
-                                            </Button>
-
-                                        </Grid>
+                                        <TextBox Grid.Row="3"
+                                            Margin="5 5 15 5"
+                                        Text="{Binding FirstMeetingHRSupport, Mode=TwoWay}"
+                                                materialDesign:HintAssist.Hint="HR support login"
+                                                materialDesign:HintAssist.IsFloating="True"/>
 
                                         <ComboBox Grid.Row="4"
                                             BorderThickness="0"
@@ -1840,28 +1822,12 @@
                                                  materialDesign:HintAssist.IsFloating="True"/>
 
 
-                                        <Grid Grid.Row="3"
-                                              Margin="5 5 15 5">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                            </Grid.ColumnDefinitions>
+                                        <TextBox Grid.Row="3"
+                                            Margin="5 5 15 5"
+                                        Text="{Binding SecondMeetingHRSupport, Mode=TwoWay}"
+                                                materialDesign:HintAssist.Hint="HR support login"
+                                                materialDesign:HintAssist.IsFloating="True"/>
 
-                                            <TextBox Grid.Column="0"
-                                            Text="{Binding SecondMeetingHRSupport, Mode=TwoWay}"
-                                                 materialDesign:HintAssist.Hint="HR support login"
-                                                 materialDesign:HintAssist.IsFloating="True"/>
-
-                                            <Button Grid.Column="1" VerticalAlignment="Top"
-                                                Margin="0 5"
-                                                ToolTip="Assign yourself as owner"
-                                                Style="{StaticResource MaterialDesignFlatButton}"
-                                                Command="{Binding ElementName=customMeetingsListView, Path=DataContext.OnMeetinngHRSupportAssignementCommand}"
-                                                CommandParameter="2">
-                                                <materialDesign:PackIcon Kind="PersonOutline" Foreground="DarkSlateGray"/>
-                                            </Button>
-
-                                        </Grid>
 
                                         <ComboBox Grid.Row="4"
                                             BorderThickness="0"
@@ -1909,7 +1875,9 @@
                                                 materialDesign:ShadowAssist.ShadowEdges="None"
                                                 materialDesign:ShadowAssist.ShadowDepth="Depth0"
                                                 BorderBrush="DarkSlateGray"
-                                                BorderThickness="1" >
+                                                BorderThickness="1" 
+                                            Command="{Binding ElementName=customMeetingsListView, Path=DataContext.UpdateCustomMeetingCommand}"
+                                            CommandParameter="{Binding}">
                                         <StackPanel Orientation="Horizontal">
                                             <materialDesign:PackIcon Kind="CreateOutline" 
                                                                 VerticalAlignment="Center"
