--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -2421,6 +2421,234 @@
         </Setter>
     </Style>
 
-    
+    <Style  x:Key="AwalCompleteListView" TargetType="{x:Type ListView}" BasedOn="{StaticResource ListViewOnMouseOverDisabled}">
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    
+                    <Grid Margin="10" VerticalAlignment="Top">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="0.3*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="0.3*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="0.3*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="0.5*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid Grid.Column="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Border Width="30" Height="30"  CornerRadius="50" BorderBrush="DarkSlateGray" 
+                                        Background="{StaticResource Background}"
+                                BorderThickness="1">
+                                    <TextBlock HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center"
+                                       Text="{Binding UserID, Converter={converters:LoginToInitialsConverter}}"
+                                        FontSize="12"/>
+                                </Border>
+
+                                <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10 0 0 0">
+
+                                    <TextBlock 
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="{DynamicResource PrimaryHueMidBrush}"
+                                    Text="{Binding UserID, Converter={converters:LoginToFullNameConverter}}"
+                                        FontWeight="Bold"
+                                        FontSize="12"/>
+
+                                    <TextBlock Grid.Row="0"
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="Gray"
+                                           FontSize="10"
+                                           Text="{Binding CreatedAt, Converter={converters:DateTimeToStringConverter}}"
+                                           />
+
+                                </StackPanel>
+
+                            </Grid>
+
+                        <!-- Separator -->
+                        <Rectangle Grid.Column="1"
+                                    VerticalAlignment="Stretch" 
+                                           Fill="LightGray" Width="1"
+                                           Margin="5 2"/>
+
+                        <!-- AWAL status -->
+                            <TextBlock Grid.Column="2"  VerticalAlignment="Center" >
+                                    <StackPanel Orientation="Horizontal">
+                                         <Ellipse Fill="{Binding AwalStatus, Converter={converters:AwalStatusToColorConverter}}"
+                                                 Width="5"
+                                                 Height="5"
+                                                  Margin="0 0 5 0"
+                                                 VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding AwalStatus}"
+                                           VerticalAlignment="Center" 
+                                   TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"
+                                         Padding="0 0 5 2"/>
+                                       
+                                            
+                                    </StackPanel>
+                        </TextBlock>
+
+                            <!-- First NCNS -->
+                            <StackPanel Grid.Column="3" Orientation="Vertical"
+                                            Margin="5">
+                                <TextBlock 
+                                   Text="First NCNS"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                                <TextBlock 
+                                  Text="{Binding FirstNCNSDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"
+                                 TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"/>
+                            </StackPanel>
+
+                            <!-- Separator -->
+                            <Rectangle Grid.Column="4"
+                                    VerticalAlignment="Stretch" 
+                                           Fill="LightGray" Width="1"
+                                           Margin="5 2"/>
+
+                            <!-- AWAL 1 -->
+                            <StackPanel Grid.Column="5" Orientation="Vertical"
+                                            Margin="5">
+                                <TextBlock 
+                                   Text="AWAL 1 sent date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                                <TextBlock 
+                                  Text="{Binding Awal1SentDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"
+                                 TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"/>
+                            </StackPanel>
+
+                            <!-- AWAL 2 -->
+                            <StackPanel Grid.Column="6" Orientation="Vertical"
+                                            Margin="5">
+                                <TextBlock 
+                                   Text="AWAL 2 sent date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                                <TextBlock 
+                                  Text="{Binding Awal2SentDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"
+                                 TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"/>
+                            </StackPanel>
+
+                            <!-- Separator -->
+                            <Rectangle Grid.Column="7"
+                                    VerticalAlignment="Stretch" 
+                                           Fill="LightGray" Width="1"
+                                           Margin="5 2"/>
+
+                            <!-- Disciplinary Date -->
+                            <StackPanel Grid.Column="8" Orientation="Vertical"
+                                            Margin="5">
+                                <TextBlock 
+                                   Text="Disciplinary Date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                                <TextBlock 
+                                  Text="{Binding DisciplinaryDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"
+                                 TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"/>
+                            </StackPanel>
+
+                            <!-- Outcome -->
+                            <StackPanel Grid.Column="9" Orientation="Vertical"
+                                            Margin="5">
+                                <TextBlock 
+                                   Text="Outcome"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                                <TextBlock 
+                                  Text="{Binding Outcome}"
+                                 TextDecorations="{Binding AwalStatus, Converter={converters:AwalTextDecorationConverter}}"
+                                       FontSize="{Binding AwalStatus, Converter={converters:AwalTextSizeConverter}}"
+                                   Foreground="{Binding AwalStatus, Converter={converters:AwalTextForegroundConverter}}"/>
+                            </StackPanel>
+
+                            <!-- Controls -->
+                            <StackPanel Grid.Column="10"
+                            Orientation="Horizontal"
+                                    HorizontalAlignment="Right">
+
+                                <!-- Info -->
+                                <Grid Background="Transparent" Margin="0 0 5 0">
+                                    <materialDesign:PackIcon Kind="InfoCircleOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="DarkSlateGray"/>
+                                    <Grid.ToolTip>
+
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"/>
+                                            </Grid.RowDefinitions>
+
+                                            <TextBlock Grid.Row="0" Visibility="{Binding CreatedBy, Converter={converters:NullToVisibilityConverter}, ConverterParameter='tooltip'}">
+                                    <Run Text="{Binding CreatedBy, Converter={converters:UserToTextConverter}, ConverterParameter='created'}"/>
+                                    <Run Text="{Binding CreatedAt, Converter={converters:DateTimeToToolTipConverter}}"/>
+                                            </TextBlock>
+
+                                            <TextBlock Grid.Row="1" Visibility="{Binding UpdatedBy, Converter={converters:NullToVisibilityConverter}, ConverterParameter='tooltip'}">
+                                    <Run Text="{Binding UpdatedBy, Converter={converters:UserToTextConverter}, ConverterParameter='updated'}"/>
+                                    <Run Text="{Binding UpdatedAt, Converter={converters:DateTimeToToolTipConverter}}"/>
+                                            </TextBlock>
+
+                                            <TextBlock Grid.Row="2" Visibility="{Binding BridgeCreatedBy, Converter={converters:NullToVisibilityConverter}, ConverterParameter='tooltip'}">
+                                    <Run Text="{Binding BridgeCreatedBy, Converter={converters:UserToTextConverter}, ConverterParameter='bridged'}"/>
+                                    <Run Text="{Binding BridgeCreatedAt, Converter={converters:DateTimeToToolTipConverter}}"/>
+                                            </TextBlock>
+
+                                            <TextBlock Grid.Row="3" Visibility="{Binding CloseBridge, Converter={converters:NullToVisibilityConverter}, ConverterParameter='tooltip'}"
+                                                       Margin="0 5 0 0">
+                                                <Run Text='"'/>
+                                                <Run Text="{Binding ReasonForClosure}" FontStyle="Italic"/>
+                                                <Run Text='"'/>
+                                            </TextBlock>
+                                        </Grid>
+                                    </Grid.ToolTip>
+                                </Grid>
+
+                            <Button Background="Transparent" 
+                                            Padding="10"
+                                                ToolTip="Open Employee View"
+                                            materialDesign:ShadowAssist.ShadowEdges="None"
+                                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                    Command="{Binding ElementName=awalCompleteListView, Path=DataContext.OpenEmployeeViewCommand}"
+                                    CommandParameter="{Binding}"
+                                            BorderThickness="0">
+
+                                <materialDesign:PackIcon Kind="PersonArrowRight" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+
+                            </Button>
+
+                        </StackPanel>
+
+                        </Grid>
+
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
