--- a/HRTools_v2/Views/Resignations/ResignationsPage.xaml
+++ b/HRTools_v2/Views/Resignations/ResignationsPage.xaml
@@ -1,17 +1,16 @@
-﻿<UserControl x:Class="HRTools_v2.Views.Awal.AwalPage"
+﻿<UserControl x:Class="HRTools_v2.Views.Resignations.ResignationsPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HRTools_v2.Views.Awal"
-              mc:Ignorable="d" 
+             xmlns:local="clr-namespace:HRTools_v2.Views.Resignations"
+             mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              d:Background="{DynamicResource Background}"
              xmlns:converters="clr-namespace:HRTools_v2.Converters"
              d:DesignHeight="750" d:DesignWidth="1400">
-
     <Grid>
 
         <Grid.RowDefinitions>
@@ -19,17 +18,17 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
         <!-- Controls -->
         <StackPanel Grid.Row="0" Orientation="Horizontal"
                     HorizontalAlignment="Right">
 
             <Button Background="Transparent" 
                                             Padding="10"
-                                                ToolTip="Export all AWAL cases"
+                                            ToolTip="Export all resignation entries"
                                             materialDesign:ShadowAssist.ShadowEdges="None"
                                             materialDesign:ShadowAssist.ShadowDepth="Depth0"
-                                    Command="{Binding ExportAwalCommand}"
+                                    Command="{Binding ExportResignationsCommand}"
                                             BorderThickness="0">
 
                 <materialDesign:PackIcon Kind="FileExcelOutline" 
@@ -49,15 +48,15 @@
                                              IsIndeterminate="True"
                                              Width="90"
                                              Height="90" 
-                                             Visibility="{Binding WidgedState, Converter={converters:HomePageWidgetStateToVisibilityConverter}, ConverterParameter='EmployeeAwalSummaryLoading'}"/>
+                                             Visibility="{Binding WidgedState, Converter={converters:HomePageWidgetStateToVisibilityConverter}, ConverterParameter='SummaryLoading'}"/>
 
-            <ListView x:Name="awalCompleteListView"
-                                    ItemsSource="{Binding AwalList}"
-                                        Style="{StaticResource AwalCompleteListView}"
-                                          Visibility="{Binding WidgedState, Converter={converters:HomePageWidgetStateToVisibilityConverter}, ConverterParameter='EmployeeAwalSummaryLoaded'}"/>
+            <ListView x:Name="resignationsCompleteListView"
+                                    ItemsSource="{Binding ResignationsList}"
+                                        Style="{StaticResource ResignationsCompleteListView}"
+                                          Visibility="{Binding WidgedState, Converter={converters:HomePageWidgetStateToVisibilityConverter}, ConverterParameter='SummaryLoaded'}"/>
 
             <TextBlock Text="No Data"
-                                           Visibility="{Binding HasAwalData, Converter={StaticResource InverseBoolToVisConverter}}"
+                                           Visibility="{Binding HasData, Converter={StaticResource InverseBoolToVisConverter}}"
                                            VerticalAlignment="Center"
                                            HorizontalAlignment="Center"
                                            Foreground="Gray"
@@ -65,8 +64,6 @@
 
 
         </Grid>
-        
-    </Grid>
-   
 
+    </Grid>
 </UserControl>
