--- a/HRTools_v2/Resources/Styles/ListView.xaml
+++ b/HRTools_v2/Resources/Styles/ListView.xaml
@@ -2768,4 +2768,157 @@
         </Setter>
     </Style>
 
+    <Style  x:Key="SanctionsCompleteListView" TargetType="{x:Type ListView}" BasedOn="{StaticResource ListViewOnMouseOverDisabled}">
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+
+                    <Grid Margin="10" VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="0.3*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="0.3*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Employee Info -->
+                        <Grid Grid.Column="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Border Width="30" Height="30"  CornerRadius="50" BorderBrush="DarkSlateGray" 
+                                        Background="{StaticResource Background}"
+                                BorderThickness="1">
+                                <TextBlock HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center"
+                                       Text="{Binding UserID, Converter={converters:LoginToInitialsConverter}}"
+                                        FontSize="12"/>
+                            </Border>
+
+                            <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10 0 0 0">
+
+                                <TextBlock 
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="{DynamicResource PrimaryHueMidBrush}"
+                                    Text="{Binding UserID, Converter={converters:LoginToFullNameConverter}}"
+                                        FontWeight="Bold"
+                                        FontSize="12"/>
+
+                                <TextBlock Grid.Row="0"
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                       Foreground="Gray"
+                                           FontSize="10"
+                                           Text="{Binding CreatedAt, Converter={converters:DateTimeToStringConverter}}"
+                                           />
+
+                            </StackPanel>
+
+                        </Grid>
+
+                        <!--Separator-->
+                        <Rectangle Grid.Column="1"
+                                    VerticalAlignment="Stretch" 
+                                           Fill="LightGray" Width="1"
+                                           Margin="5 2"/>
+
+
+                        <!-- Meeting type -->
+                        <StackPanel Grid.Column="2" Orientation="Vertical"
+                                            Margin="5">
+                            <TextBlock 
+                                   Text="Meeting type"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                            <TextBlock 
+                                  Text="{Binding MeetingType}"/>
+                        </StackPanel>
+
+                        <!-- Sanction -->
+                        <StackPanel Grid.Column="3" Orientation="Vertical"
+                                            Margin="5">
+                            <TextBlock 
+                                   Text="Sanction start date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                            <TextBlock 
+                                  Text="{Binding Sanction}"/>
+                        </StackPanel>
+
+                        <!-- Sanction start date -->
+                        <StackPanel Grid.Column="4" Orientation="Vertical"
+                                            Margin="5">
+                            <TextBlock 
+                                   Text="Sanction start date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                            <TextBlock 
+                                  Text="{Binding SanctionStartDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"/>
+                        </StackPanel>
+
+                        <!-- Sanction end date -->
+                        <StackPanel Grid.Column="5" Orientation="Vertical"
+                                            Margin="5">
+                            <TextBlock 
+                                   Text="Sanction end date"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                            <TextBlock 
+                                  Text="{Binding SanctionEndDate, Converter={converters:DateTimeToStringConverter}, ConverterParameter=1}"/>
+                        </StackPanel>
+
+                        <!--Separator-->
+                        <Rectangle Grid.Column="6"
+                                    VerticalAlignment="Stretch" 
+                                           Fill="LightGray" Width="1"
+                                           Margin="5 2"/>
+
+                        <StackPanel Grid.Column="7" Orientation="Vertical"
+                                            Margin="5">
+                            <TextBlock 
+                                   Text="Submitted by"
+                                FontSize="{StaticResource SecondaryListFontSize}"
+                                Foreground="Gray"/>
+                            <TextBlock 
+                                    Text="{Binding CreatedBy, Converter={converters:LoginToFullNameConverter}}"/>
+                        </StackPanel>
+
+
+                        <!-- Controls -->
+                        <StackPanel Grid.Column="10"
+                            Orientation="Horizontal"
+                                    HorizontalAlignment="Right">
+
+                            <Button Background="Transparent" 
+                                            Padding="10"
+                                                ToolTip="Open Employee View"
+                                            materialDesign:ShadowAssist.ShadowEdges="None"
+                                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                    Command="{Binding ElementName=sanctionsCompleteListView, Path=DataContext.OpenEmployeeViewCommand}"
+                                    CommandParameter="{Binding}"
+                                            BorderThickness="0">
+
+                                <materialDesign:PackIcon Kind="PersonArrowRight" 
+                                                                 VerticalAlignment="Center"
+                                                                 Foreground="DarkSlateGray"/>
+
+                            </Button>
+
+                        </StackPanel>
+
+                    </Grid>
+
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
