--- a/HRTools_v2/Views/MainWindow.xaml
+++ b/HRTools_v2/Views/MainWindow.xaml
@@ -115,7 +115,7 @@
                             Style="{StaticResource MaterialDesignFlatButton}"
                                 Height="50"
                             Command="{Binding NavigateCommand}"
-                            CommandParameter="AllSanctions">
+                            CommandParameter="SanctionsPage">
                             <StackPanel Orientation="Vertical">
                                 <materialDesign:PackIcon Kind="ScaleBalance"
                                                              HorizontalAlignment="Center"
