--- a/HRTools_v2/Resources/Styles/ListBox.xaml
+++ b/HRTools_v2/Resources/Styles/ListBox.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     
+                    xmlns:converters="clr-namespace:HRTools_v2.Converters"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!-- Base ListView Style -->
@@ -8,6 +10,24 @@
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
         <Setter Property="BorderThickness" Value="0"/>
+    </Style>
+
+    <Style x:Key="ListBoxOnMouseOverDisabled" TargetType="{x:Type ListBox}" BasedOn="{StaticResource ListBox}">
+        <!-- Disable onMouseOver and default style -->
+        <Setter Property="ItemContainerStyle">
+            <Setter.Value>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style  x:Key="SearchListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource ListBox}">
@@ -112,6 +132,88 @@
         </Setter>
     </Style>
 
+    <Style  x:Key="MeetingsSnippetListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource ListBoxOnMouseOverDisabled}" >
 
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Grid Margin="10">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Case Age -->
+                        <TextBlock Grid.Column="0"  VerticalAlignment="Center" >
+                                    <StackPanel Orientation="Horizontal">
+                                         <Ellipse Fill="{Binding MeetingStatus, Converter={converters:MeetingStatusToColorConverter}}"
+                                                 Width="5"
+                                                 Height="5"
+                                                  Margin="0 0 5 0"
+                                                 VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding MeetingStatus}"
+                                           VerticalAlignment="Center" 
+                                   TextDecorations="{Binding MeetingStatus, Converter={converters:MeetingTextDecorationConverter}}"
+                                       FontSize="{Binding MeetingStatus, Converter={converters:MeetingTextSizeConverter}}"
+                                   Foreground="{Binding MeetingStatus, Converter={converters:MeetingTextForegroundConverter}}"
+                                         Padding="0 0 5 2"/>
+                                       
+                                            
+                                    </StackPanel>
+                        </TextBlock>
+
+
+                        <!-- Employee Name -->
+                        <materialDesign:ColorZone 
+                            Grid.Column="1"
+                                materialDesign:ShadowAssist.ShadowDepth="Depth2"
+                                Background="Transparent"
+                                VerticalAlignment="Stretch">
+
+
+                            <!-- Main Content -->
+                            <Border Padding="0 0 8 0"  Grid.Column="1" Background="Transparent">
+
+                                <StackPanel VerticalAlignment="Center" Background="Transparent">
+
+                                    <!-- Header -->
+                                    <TextBlock Text="{Binding EmployeeName}"
+                                    Padding="0 0 0 2"
+                                    Foreground="{DynamicResource PrimaryHueDarkBrush}"
+                                    TextTrimming="CharacterEllipsis"
+                                    HorizontalAlignment="Stretch"/>
+
+                                    <!-- Content -->
+                                    <TextBlock 
+                                    Padding="0 2 0 0"
+                                    Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                    Foreground="Gray"
+                                    TextTrimming="CharacterEllipsis"
+                                     HorizontalAlignment="Stretch">
+                                        <Run Text="Meeting Type: "/>
+                                        <Run Text="{Binding MeetingType}"/>
+                                    </TextBlock>
+
+                                    <TextBlock 
+                                        Style="{StaticResource MaterialDesignOverlineTextBlock}"
+                                    Padding="0 2 0 0"
+                                    Foreground="Gray"
+                                    TextTrimming="CharacterEllipsis"
+                                     HorizontalAlignment="Stretch">
+                                        <Run Text="Meeting Status: "/>
+                                        <Run Text="{Binding MeetingStatus}"/>
+                                    </TextBlock>
+                                </StackPanel>
+                            </Border>
+                        </materialDesign:ColorZone>
+
+
+                    </Grid>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+
+    </Style>
 
 </ResourceDictionary>
